Updating tests for Azure and Zing